# ENSAI-2A-projet-info-template

./: .coveragerc  .gitignore  Notes Paulin.txt  README.md  docker-compose.yml  logging_config.yml  notes.txt  notes_paulin.txt  onyxia_setup.sh  pyproject.toml  requirements.txt  run_backend.sh  run_frontend.sh
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
backend/: Dockerfile  README.md  logging_config.yml  pyproject.toml
backend/src/: main.py
backend/src/business_object/: joueur.py  player.py
backend/src/controller/: connexion_controller.py  game_controller.py  joueur_controller.py  login_controller.py  player_controller.py
backend/src/dao/: db_connection.py  joueur_dao.py  player_dao.py
backend/src/schema/: game_model.py  player_model.py
backend/src/service/: game_service.py  joueur_service.py  player_service.py
backend/src/utils/: env_variables.py  log_decorator.py  log_init.py  log_middleware.py  log_utils.py  reset_database.py  security.py  singleton.py
backend/tests/: conftest.py
backend/tests/test_dao/: test_joueur_dao.py  test_player_dao.py
backend/tests/test_service/: test_joueur_service.py  test_player_service.py
data/: Crea_table_utile.sql  init_db.sql  pop_db.sql  pop_db_test.sql
doc/: activity_diagram.md  class_diagram.md  diag_classes.md  suivi.md  use_case_diagram.txt
doc/report/: README.md  report.qmd
doc/suivi/: 2024.09.13-semaine1.md  2024.09.16-semaine2.md  2024.09.26-semaine3.md  2024.10.03-semaine4.md  2024.10.10-semaine5.md  2025.09.04-semaine1.md  2025.09.11-semaine2.md  2025.09.18-semaine3.md  2025.09.25-semaine4.md  2025.10.02-semaine5.md  2025.10.09-semaine6.md  2025.10.16-semaine7.md  2025.10.23-semaine8.md  2025.11.06-semaine10.md  2025.11.13-semaine11.md  2025.11.20-semaine12.md  2025.11.27-semaine13.md  2025.12.04-semaine14.md
doc/tracking/: 2024.09.13-week1.md  YYYY.MM.DD-weekN.md
frontend/: Dockerfile  README.md  logging_config.yml  pyproject.toml
frontend/.streamlit/: config.toml  secrets.toml
frontend/src/: app.py
frontend/src/pages/: create_player.py  home.py  joueur_creation_page.py  joueur_liste_page.py  list_players.py  main_page.py  menu_page.py  play_game.py  player_menu.py
frontend/src/utils/: api_client.py  auth_guard.py  env_variables.py  log_init.py
src/: __main__.py  app.py  main.py
src/backend/: app.py  logging_config.yml
src/backend/client/: pokemon_client.py
src/backend/controller/: connexion_controller.py
src/backend/dao/: db_connection.py
src/backend/utils/: log_init.py
src/business_object/: EntiteSportive.py  Equipe.py  Match.py  MatchPerso.py  Pari.py  Region.py  Tournoi.py  Utilisateur.py  ballchasing.py  board.py  carte.py  crea_data.py  evaluateur_combinaison.py  info_manche.py  joueur.py  liste_cartes.py  main.py  manche.py  reserve.py  table.py
src/business_object/combinaison/: brelan.py  carre.py  combinaison.py  couleur.py  double_paire.py  full.py  paire.py  quinte.py  quinte_flush.py  simple.py
src/client/: pokemon_client.py
src/dao/: db_connection.py  equipe_dao.py  joueur_dao.py  manche_dao.py  manche_joueur_dao.py  match_dao.py  paris_dao.py  tournoi_dao.py  utilisateur_dao.py
src/frontend/: main.py  main_page.py
src/frontend/pages/: connexion_page.py  joueur_creation_page.py  joueur_liste_page.py  joueur_page.py  menu_page.py
src/graphical_asset/: nom.txt
src/service/: EquipeService.py  JoueurService.py  MatchService.py  UtilisateurService.py  action_service.py  calendrier_evenement.py  consulter_stats.py  credit_service.py  equipe_service.py  gestion_tournoi.py  joueur_service.py  manche_joueur_service.py  manche_service.py  match_service.py  paris_service.py  table_service.py  tournoi_service.py  utilisateur_service.py
src/tests/: conftest.py
src/tests/test_dao/: test_joueur_dao.py  test_match_dao.py  test_tournoi_dao.py  test_utilisateur_dao.py
src/tests/test_objets/: test_equipe.py  test_joueur.py  test_match.py  test_pari.py  test_tournoi.py  test_utilisateur.py
src/tests/test_service/: test_calendrier_evenement.py  test_consulter_stats.py  test_joueur_service.py  test_utilisateur_service.py
src/tests/tests_business_object/: test_board.py  test_carte.py  test_evaluateur_combinaison.py  test_info_manche.py  test_joueur.py  test_liste_cartes.py  test_main.py  test_manche.py  test_reserve.py  test_table.py
src/tests/tests_dao/: test_joueur_dao.py  test_manche_dao.py  test_manche_joueur_dao.py
src/tests/tests_service/: test_action_service.py  test_joueur_service.py  test_manche_joueur_service.py
src/utils/: log_init.py  reset_database.py  securite.py
src/view/: menu_admin.py  menu_creation_table.py  menu_info_table.py  menu_joueur_vue.py  menu_manche.py  menu_table.py  pokemon_vue.py  session.py  vue_abstraite.py
src/view/accueil/: InfosSessionVue.py  accueil_vue.py  connexion_vue.py  inscription_vue.py
src/view/pari/: nouveau_pari_vue.py  (+1 more)
tests/test_dao/: test_joueur_dao.py
tests/test_service/: test_joueur_service.py
(+21 files in other folders)
