[project]
name = "my_project_template"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"} #source files are in folder src

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # si tu veux ignorer la longueur de ligne

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
addopts = "-v -s"
