[project]
name = "project_name_front"
version = "0.1.0"
description = "User interface template for the ENSAI 2nd year IT project"
authors = [{ name = "Lastname Firstname" }, { name = "Author2" }]
requires-python = ">=3.13"

dependencies = [
    "streamlit",
    "requests",
    "pandas",
]

[project.optional-dependencies]
dev = ["bandit", "coverage", "pylint", "pytest", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["*test*.py"]
addopts = "-v -s"